--- a/env.ipynb
+++ b/env.ipynb
@@ -71,6 +71,80 @@
    "source": [
     "pip install matplotlib"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "eb69c8bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scipy\n",
+      "  Using cached scipy-1.15.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
+      "Requirement already satisfied: numpy<2.5,>=1.23.5 in ./.venv/lib/python3.10/site-packages (from scipy) (2.2.5)\n",
+      "Using cached scipy-1.15.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (37.7 MB)\n",
+      "Installing collected packages: scipy\n",
+      "Successfully installed scipy-1.15.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b3335237",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting cvxpy\n",
+      "  Downloading cvxpy-1.6.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.3 kB)\n",
+      "Collecting osqp>=0.6.2 (from cvxpy)\n",
+      "  Downloading osqp-1.0.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.1 kB)\n",
+      "Collecting clarabel>=0.5.0 (from cvxpy)\n",
+      "  Downloading clarabel-0.10.0-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.8 kB)\n",
+      "Collecting scs>=3.2.4.post1 (from cvxpy)\n",
+      "  Downloading scs-3.2.7.post2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy>=1.21.6 in ./.venv/lib/python3.10/site-packages (from cvxpy) (2.2.5)\n",
+      "Requirement already satisfied: scipy>=1.11.0 in ./.venv/lib/python3.10/site-packages (from cvxpy) (1.15.3)\n",
+      "Collecting jinja2 (from osqp>=0.6.2->cvxpy)\n",
+      "  Downloading jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting setuptools (from osqp>=0.6.2->cvxpy)\n",
+      "  Using cached setuptools-80.7.1-py3-none-any.whl.metadata (6.6 kB)\n",
+      "Collecting joblib (from osqp>=0.6.2->cvxpy)\n",
+      "  Using cached joblib-1.5.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting MarkupSafe>=2.0 (from jinja2->osqp>=0.6.2->cvxpy)\n",
+      "  Using cached MarkupSafe-3.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.0 kB)\n",
+      "Downloading cvxpy-1.6.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.2 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading clarabel-0.10.0-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.0 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading osqp-1.0.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (344 kB)\n",
+      "Downloading scs-3.2.7.post2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (10.4 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.4/10.4 MB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
+      "Using cached MarkupSafe-3.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (20 kB)\n",
+      "Using cached joblib-1.5.0-py3-none-any.whl (307 kB)\n",
+      "Using cached setuptools-80.7.1-py3-none-any.whl (1.2 MB)\n",
+      "Installing collected packages: setuptools, MarkupSafe, joblib, scs, jinja2, clarabel, osqp, cvxpy\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8/8\u001b[0m [cvxpy]m━━━━\u001b[0m \u001b[32m7/8\u001b[0m [cvxpy]]afe]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed MarkupSafe-3.0.2 clarabel-0.10.0 cvxpy-1.6.5 jinja2-3.1.6 joblib-1.5.0 osqp-1.0.4 scs-3.2.7.post2 setuptools-80.7.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install cvxpy"
+   ]
   }
  ],
  "metadata": {
